Changelog for Statocles

{{ $NEXT }}

0.086     2017-09-13 22:22:32-05:00 America/Chicago

    [Added]

    - Added `disable_content_template` attribute to document,
      application, and site objects. This allows a site to disable
      content template processing (in the rare case where the template
      processing is confused by the content).

0.085     2017-09-08 02:25:01-05:00 America/Chicago

    [Added]

    - Added the "dom" attribute to Statocles::Page. This caches the
      parsed HTML for the multiple transformations that must be
      performed. Hopefully this will speed up performance a little bit.

    - Added JSON frontmatter support. Now if the first character of
      a document is a `{`, the frontmatter will be treated as JSON. JSON
      can be a single line (the `}` end bracket must be at the end of
      the line) or multiple lines (the `}` end bracket must be on a line
      by itself).

0.084     2017-08-09 12:00:17-05:00 America/Chicago

    [Added]

    - The Store object now has a "files" method which gets the iterator
      over all the files in the store. This can then be easily
      overridden to get the list of files from another place: The
      configuration file, a manifest file, a database, or what-have-you.

      Thanks @djerius for the patch!

0.083     2017-01-31 16:44:17-06:00 America/Chicago

    [Added]

    - The new `statocles status` command shows you a quick status of
      your site, including the last time it was deployed and what date
      it was deployed up to (if different from the last date it was
      deployed). We will be adding more things to this later, so let us
      know if there are any statistics you'd like to know about your
      site! Thanks @perlancar [Github #516]

    - The `include` helper now accepts a `-raw` flag to disable the
      template renderer. This allows you to easily include Perl code and
      not have it mistaken for a template. Thanks justinQuiring on IRC